# Quor

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  backlog.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: canary.yml  ci.yml  codeql.yml  publish-testpypi.yml  release.yml
docs/: ALGORITHMS.md  ARCHITECTURE.md  BENCHMARKS.md  COMPARISON.md  CONTRIBUTING.md  FAQ.md  PRODUCT.md  ROADMAP.md
docs/archive/architecture-exploration/: engineering-patterns.md
docs/archive/product-discovery/: competitive-research.md  final-discovery.md
docs/archive/research/: design-review.md  zap-analysis.md
docs/design/: QB-005A-ast-summarization-design.md  QB-035A-multi-agent-adapter-design.md
docs/final/: ANTI_GOALS.md  CLAUDE.md  COMMAND_SUPPORT.md  CONTRIBUTING.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  PROJECT_BIBLE.md  PROJECT_STATUS.md  RELEASE_CRITERIA.md  RESEARCH_COMPLETION.md  ROADMAP.md
quor/: __init__.py  __main__.py  errors.py
quor/adapters/: base.py  claude.py  claude_read.py  dispatcher.py  hook_manifest.py
quor/analytics/: compression_summary.py  effectiveness.py  filter_baseline.py  filter_divergence.py  filter_history.py  filter_report.py  stage_stats.py
quor/cli/: format_utils.py  main.py
quor/cli/commands/: doctor.py  explain.py  gain.py  init.py  validate.py  verify.py
quor/config/: loader.py  model.py
quor/filters/: loader.py  registry.py  trust.py
quor/filters/builtin/: build.toml  cat-csharp.toml  cat-dotenv.toml  cat-go.toml  cat-ini.toml  cat-java.toml  cat-javascript.toml  cat-json.toml  cat-python.toml  cat-rust.toml  cat-toml.toml  cat-typescript.toml  cat-yaml.toml  cat.toml  ci.toml  document-text.toml  gcc.toml  git.toml  java.toml  markdown.toml  node.toml  pip.toml  poetry.toml  pytest.toml  z_generic.toml
quor/pipeline/: content_type.py  engine.py  mask.py  onboarding.py  plugin_loader.py  secrets.py  tee.py
quor/pipeline/ast_summarize/: _treesitter_utils.py  csharp.py  go.py  java.py  javascript.py  python.py  registry.py  rust.py  typescript.py
quor/pipeline/extract/: docx.py  pdf.py  registry.py
quor/pipeline/stages/: _utils.py  base.py  code_ast_summarize.py  collapse_unchanged_context.py  deduplicate_consecutive.py  group_repeated.py  match_output.py  max_tokens.py  python_ast_summarize.py  regex_replace.py  remove_ansi.py  strip_lines.py  structured_data_summarize.py  truncate_lines.py
quor/pipeline/structured_data/: __init__.py  collapse.py  json_fmt.py  registry.py  toml_fmt.py  yaml_fmt.py
quor/plugins/: __init__.py  base.py  registry.py
quor/rewrite/: classifier.py  invocation.py  lexer.py  rules.py
quor/tracking/: db.py  schema.sql
tech-debt/: 2026-07-06-pre-release-audit.md
tests/: conftest.py
tests/benchmarks/: README.md  __init__.py  analytics_report.py  ast_timing_analysis.py  baseline.json  benchmark_runner.py  early_exit_analysis.py  history.py  manifest.toml  report.py  run_benchmarks.py  test_benchmarks.py
tests/benchmarks/samples/bun/: 001_successful_install_with_warnings.txt  002_lifecycle_script_failure.txt  003_dependency_resolution_failure.txt
tests/benchmarks/samples/cat/: 001_nginx_config_comments.txt  002_deploy_shell_script.txt
tests/benchmarks/samples/cat-csharp/: 001_payment_processor.cs  002_order_service.cs
tests/benchmarks/samples/cat-go/: 001_cart_service.go  002_payment_processor.go
tests/benchmarks/samples/cat-java/: 001_order_service.java  002_notification_dispatcher.java
tests/benchmarks/samples/cat-javascript/: 001_retry_fetch_readme_example.js  002_cart_service.js  003_notification_dispatch_service.js  004_vendor_bundle_min.js  005_gateway_client_heavily_commented.js
tests/benchmarks/samples/cat-json/: 001_composer_lock_dependencies.json  002_api_response_event_log.json
tests/benchmarks/samples/cat-python/: 001_payment_processor.txt  002_webhook_handlers.txt
tests/benchmarks/samples/cat-rust/: 001_cart_service.rs  002_payment_processor.rs
tests/benchmarks/samples/cat-toml/: 001_poetry_lock_packages.toml  002_cargo_lock_packages.toml
tests/benchmarks/samples/cat-tsx/: 001_shopping_cart_component.tsx
tests/benchmarks/samples/cat-typescript/: 001_currency_utils_short_example.ts  002_orders_service.ts  003_domain_model_interfaces.ts  004_orders_controller_nestjs.ts  005_generic_repository_utils.ts  006_parsing_overloads.ts
tests/benchmarks/samples/cat-yaml/: 001_k8s_deployment_env_list.yaml  002_ci_pipeline_steps.yaml
tests/benchmarks/samples/docker/: 001_build_success.txt  002_build_failure.txt
tests/benchmarks/samples/document-text/: 001_project_notes.txt  002_short_rst_doc.rst
tests/benchmarks/samples/docx/: 001_design_doc_ranking_cache.docx  002_short_client_readme.docx
tests/benchmarks/samples/dotenv/: 001_backend_service_env.txt  002_local_dev_env_minimal.txt
tests/benchmarks/samples/eslint/: 001_multi_file_mixed_severity.txt  002_react_lint_errors.txt
tests/benchmarks/samples/gcc/: 001_successful_build_with_warnings.txt  002_syntax_error.txt  003_template_instantiation_failure.txt  (+3 more)
tests/fixtures/commands/: compound.toml  env_prefix.toml  exclusions.toml  simple.toml  transparent_prefix.toml
tests/fixtures/test_plugin/: pyproject.toml
tests/fixtures/test_plugin/quor_test_stage/: stage.py
tests/integration/: test_cli_commands.py
tests/unit/: test_adapters.py  test_adapters_read.py  test_ast_summarize.py  test_cli.py  test_compression_summary.py  test_config.py  test_document_filters.py  test_early_exit.py  test_extract.py  test_extract_docx.py  test_extract_pdf.py  test_fail_open.py  test_filter_analytics.py  test_filter_safety.py  test_filters.py  test_format_utils.py  test_hook_manifest.py  test_invocation.py  test_node_tool_routing.py  test_onboarding.py  test_pipeline.py  test_plugin_loader.py  test_plugins.py  test_read_hook_activation.py  test_read_hook_ast_summarization.py  test_read_hook_structured_data.py  test_release_workflow.py  test_rewrite.py  test_secrets.py  test_stages.py  test_structured_data.py  test_tee.py  test_tracking.py  test_version.py
(+76 files in other folders)
