[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quor"
version = "0.1.0"
description = "A rule-based command-output optimization and context-compression layer that reduces unnecessary LLM context while preserving important information."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["ai", "context", "compression", "claude", "llm", "developer-tools", "windows", "token-reduction"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "orjson>=3.9.0",
    "platformdirs>=4.0.0",
    "regex>=2024.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/priyanshup/Quor"
Repository = "https://github.com/priyanshup/Quor"
Issues = "https://github.com/priyanshup/Quor/issues"
Documentation = "https://github.com/priyanshup/Quor/tree/main/docs/final"
Changelog = "https://github.com/priyanshup/Quor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    # pytest/pytest-cov are bounded, not exact-pinned: stable across minor/major
    # releases and rarely the source of silent CI-vs-local divergence.
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
    # ruff/mypy are exact-pinned: new releases regularly add lint rules or
    # tighten checks, which silently breaks CI without any code change unless
    # local and CI resolve the identical version (see DECISIONS.md).
    "mypy==2.1.0",
    "ruff==0.15.20",
    # The quor-test-stage fixture (tests/fixtures/test_plugin) is deliberately
    # NOT listed here as a `file:` dependency: a relative file:// URL is baked
    # verbatim into published package metadata, and breaks for anyone who
    # installs quor[dev] from PyPI rather than from a source checkout (the
    # path doesn't exist outside the repo). It's installed as a separate step
    # in CI and in local dev setup instead — see CONTRIBUTING.md.
]

[project.scripts]
quor = "quor.__main__:main"
qr   = "quor.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["quor"]

[tool.hatch.metadata]
allow-direct-references = true

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF", "BLE"]
ignore = [
    "E501",   # line too long — ruff format handles wrapping
]

[tool.ruff.lint.isort]
known-first-party = ["quor"]

[tool.ruff.lint.flake8-bugbear]
# typer.Argument(...)/typer.Option(...) as a parameter default is the
# required, idiomatic way to declare CLI params — not a mutable-default bug.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["regex"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["quor_test_stage", "quor_test_stage.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
markers = [
    "integration: marks tests requiring real filesystem or subprocess (deselect with '-m not integration')",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["quor"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
# Raised to 80 in Phase 1 once pipeline code has unit tests.
fail_under = 0
