[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quor"
version = "0.4.1"
description = "A rule-based command-output optimization and context-compression layer that reduces unnecessary LLM context while preserving important information."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["ai", "context", "compression", "claude", "llm", "developer-tools", "windows", "token-reduction"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "orjson>=3.9.0",
    "platformdirs>=4.0.0",
    "regex>=2024.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/priyanshup/Quor"
Repository = "https://github.com/priyanshup/Quor"
Issues = "https://github.com/priyanshup/Quor/issues"
Documentation = "https://github.com/priyanshup/Quor/tree/main/docs/final"
Changelog = "https://github.com/priyanshup/Quor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    # pytest/pytest-cov are bounded, not exact-pinned: stable across minor/major
    # releases and rarely the source of silent CI-vs-local divergence.
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
    # ruff/mypy are exact-pinned: new releases regularly add lint rules or
    # tighten checks, which silently breaks CI without any code change unless
    # local and CI resolve the identical version (see DECISIONS.md).
    "mypy==2.2.0",
    "ruff==0.15.20",
    # python-docx (QB-007E2) is listed here too, not just in `documents`
    # below, so contributors running the full test suite get real DOCX
    # fixture coverage (tests/unit/test_extract_docx.py) without a separate
    # `quor[documents]` install step.
    "python-docx>=1.1.0,<2.0.0",
    # pdfplumber (QB-007E3), same reasoning, for tests/unit/test_extract_pdf.py.
    "pdfplumber>=0.11.0,<1.0.0",
    # tree-sitter / tree-sitter-javascript (QB-005C) are listed here too, not
    # just in `javascript` below, so contributors running the full test suite
    # get real JS parsing fixture coverage (tests/unit/test_ast_summarize.py's
    # TestAnalyzeJavaScript) without a separate `quor[javascript]` install
    # step — same reasoning as python-docx/pdfplumber above.
    #
    # tree-sitter is capped BELOW 0.26.0 deliberately, not just bounded —
    # 0.26.0 has a real, reproducible native-level memory-corruption bug
    # (verified during QB-005C implementation, not assumed): calling
    # Node.child_by_field_name() followed by accessing .start_point/
    # .end_point on the result, repeated roughly 85+ times against nodes
    # from the same parsed tree, segfaults the whole Python process —
    # confirmed via bisection down to the exact call pattern, confirmed
    # absent in 0.25.2 at the same and far larger scales (2000+ nodes), and
    # confirmed independent of traversal style (both `.children` iteration
    # and cursor-based `TreeCursor` walking trigger it at a large enough
    # node count). This is a genuine upstream regression, not anything in
    # quor's own usage pattern — see backlog.md's QB-005C entry for the
    # full bisection record. Raise this ceiling only after a released
    # tree-sitter version is verified (not assumed) to no longer reproduce
    # it, mirroring DECISIONS.md's exact-pin rationale for ruff/mypy (a new
    # release silently breaking a dependency this load-bearing must be a
    # deliberate, visible bump, not a silent `pip install` side effect).
    "tree-sitter>=0.23.0,<0.26.0",
    "tree-sitter-javascript>=0.23.0,<1.0.0",
    # tree-sitter-typescript (QB-005D), same reasoning — real fixture
    # coverage (TestAnalyzeTypeScript in tests/unit/test_ast_summarize.py)
    # without a separate quor[javascript] install step. Re-verified against
    # the tree-sitter<0.26.0 ceiling above: the QB-005C memory-corruption
    # bisection (child_by_field_name() + point access, repeated 85+ times)
    # was re-run specifically against this grammar at n=2000 (flat
    # functions) and n=3000 (nested class+method, i.e. 6000+ field-access
    # calls) using tree-sitter 0.25.2 — clean at both scales, confirming
    # the bug does not reappear with the TypeScript grammar and the
    # existing ceiling remains sufficient with no dependency-version change
    # needed. See backlog.md's QB-005D entry for the full record.
    "tree-sitter-typescript>=0.23.0,<1.0.0",
    # reportlab is a *write*-only PDF library, never imported by quor itself
    # (pdfplumber, quor's read-only PDF dependency, cannot author PDFs) — it
    # exists solely so the test suite can generate real PDF fixtures with
    # controlled font sizes/names/layout, the same way python-docx doubles
    # as both quor's read dependency and its own fixture generator above.
    "reportlab>=4.0.0,<6.0.0",
    # The quor-test-stage fixture (tests/fixtures/test_plugin) is deliberately
    # NOT listed here as a `file:` dependency: a relative file:// URL is baked
    # verbatim into published package metadata, and breaks for anyone who
    # installs quor[dev] from PyPI rather than from a source checkout (the
    # path doesn't exist outside the repo). It's installed as a separate step
    # in CI and in local dev setup instead — see CONTRIBUTING.md.
]
documents = [
    # DOCX structure extraction (QB-007E2). Core install keeps working
    # without this extra — quor/pipeline/extract/docx.py's extract_docx()
    # fails open (returns None, warns, never raises) if it's absent; see
    # ADR-014's `quor[ml]`-style extras precedent, the template this group
    # follows.
    "python-docx>=1.1.0,<2.0.0",
    # PDF structure extraction (QB-007E3). Same fail-open guarantee —
    # quor/pipeline/extract/pdf.py's extract_pdf() returns None, warns,
    # never raises, if pdfplumber is absent.
    "pdfplumber>=0.11.0,<1.0.0",
]
javascript = [
    # JavaScript AND TypeScript AST summarization (QB-005C, QB-005D — one
    # extra covers both languages, a deliberate choice made in QB-005D, not
    # pre-decided by the design doc: tree-sitter-typescript's wheel is
    # small (~280 KB), a user who wants either language very likely wants
    # both, and a second `quor[typescript]` extra would only add
    # install-matrix permutations for a dependency-weight concern that
    # doesn't actually apply here — see typescript.py's own module
    # docstring for the full reasoning). Core install keeps working
    # without this extra — quor/pipeline/ast_summarize/javascript.py's
    # analyze_javascript() and typescript.py's analyze_typescript()/
    # analyze_tsx() all fail open (return an empty set, warn, never raise)
    # if the relevant package is absent; see ADR-014's `quor[ml]`-style
    # extras precedent (the same template `documents` above follows) and
    # docs/design/QB-005A-ast-summarization-design.md Section 5 for why
    # tree-sitter — not a pure-Python parser — is the correct choice here.
    # Version floor matches the modern tree-sitter Python bindings API
    # (`Parser(language)` single-argument construction) this module relies
    # on. tree-sitter's ceiling excludes 0.26.0 specifically — see the
    # matching, fuller comment on the `dev` extra's own tree-sitter entry
    # above for the verified memory-corruption bug this works around, and
    # the QB-005D entry there for why tree-sitter-typescript did not need
    # its own additional constraint.
    "tree-sitter>=0.23.0,<0.26.0",
    "tree-sitter-javascript>=0.23.0,<1.0.0",
    "tree-sitter-typescript>=0.23.0,<1.0.0",
]

[project.scripts]
quor = "quor.__main__:main"
qr   = "quor.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["quor"]

[tool.hatch.build.targets.sdist]
# Excluded from the sdist regardless of git-tracking status (hatchling's
# default sdist otherwise includes anything not gitignored, not just files
# relevant to installing/running quor). None of this is needed to build,
# install, or verify the package from source — it's internal development
# material never meant for public distribution:
#   /scripts           - local-machine diagnostic utilities
#   /tech-debt         - internal pre-release audit notes
#   /docs/archive      - archived research notes, superseded by docs/final
#   /docs/design       - internal engineering design docs
#   /.github           - CI workflow configuration, irrelevant outside this repo
#   /backlog.md        - internal planning/prioritization document
#   /tests/benchmarks  - compression-regression benchmark suite (CI-only
#                        tooling; tests/unit and tests/integration, which
#                        actually verify installed behavior, are kept)
exclude = [
    "/scripts",
    "/tech-debt",
    "/docs/archive",
    "/docs/design",
    "/.github",
    "/backlog.md",
    "/tests/benchmarks",
]

[tool.hatch.metadata]
allow-direct-references = true

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF", "BLE"]
ignore = [
    "E501",   # line too long — ruff format handles wrapping
]

[tool.ruff.lint.isort]
known-first-party = ["quor"]

[tool.ruff.lint.flake8-bugbear]
# typer.Argument(...)/typer.Option(...) as a parameter default is the
# required, idiomatic way to declare CLI params — not a mutable-default bug.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["regex"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["quor_test_stage", "quor_test_stage.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# python-docx (QB-007E2, quor[documents]) is optional at runtime — mypy must
# still succeed for anyone running `mypy quor/` without it installed.
module = ["docx", "docx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pdfplumber (QB-007E3, quor[documents]) is optional at runtime — same
# reasoning as the docx override above.
module = ["pdfplumber", "pdfplumber.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# tree-sitter / tree-sitter-javascript / tree-sitter-typescript (QB-005C/D,
# quor[javascript]) are optional at runtime — same reasoning as the
# docx/pdfplumber overrides above. All are imported lazily inside
# analyze_javascript()/analyze_typescript()/analyze_tsx(), never at module
# top level, but mypy still needs this so `mypy quor/` succeeds whether or
# not the extra is installed in a given environment.
module = [
    "tree_sitter",
    "tree_sitter.*",
    "tree_sitter_javascript",
    "tree_sitter_javascript.*",
    "tree_sitter_typescript",
    "tree_sitter_typescript.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
# "-m not integration" keeps the default, flag-less `pytest`/`pytest tests/`
# invocation fast (PA-Q04: <30s) by excluding real-subprocess/real-filesystem
# tests. Run the integration-only subset explicitly with `pytest -m integration`
# (this overrides addopts' -m, it does not combine with it — verified: pytest's
# -m is a single string option, and a CLI-supplied value takes precedence over
# the one from addopts, exactly like any other last-one-wins argparse option).
addopts = "--tb=short -q -m \"not integration\""
markers = [
    "integration: marks tests requiring real filesystem or subprocess (run with 'pytest -m integration')",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["quor"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
# Raised to 80 in Phase 1 once pipeline code has unit tests.
fail_under = 0
